k8s/frontend/deployment.yaml
# k8s/frontend/deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: amazon-clone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: vamsibm36/amazon-clone-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "32Mi"
              cpu: "50m"
            limits:
              memory: "64Mi"
              cpu: "100m"
